ModMom NAVBAR and basic structure

--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -1,5 +1,5 @@
 
-# MvM: Additional translations for Mendix customization
+# MvM: Additional translations for MOD MOM customization
 
 # Print support
 [print_page]
